--- a/cobol/orcabt/Makefile
+++ b/cobol/orcabt/Makefile
@@ -348,6 +348,7 @@ SRCS = ORCBD001.CBL \
        ORCBGS121.CBL \
        ORCMUP0231.CBL \
        ORCBI202.CBL \
+       ORCVTRESEDEN.CBL \
 
 top_builddir = ../..
 include $(top_builddir)/cobol/Makefile.global
