--- a/scripts/monthly/recept6.sh.in
+++ b/scripts/monthly/recept6.sh.in
@@ -19,10 +19,11 @@ fi
 #        $4 エラーファイル名 
 #        $5 JOBID 
 #        $6 SHELLID
-#        $7 県単用項目編集プログラム名（医保用）
 #        $8 処理年月
 #        $9  作成年月日
 #        $10 作成時間
+#        $12 レセ電出力区分
+#        $13 指定医療機関
 #        $14 コメント記載記載区分
 #        $15 枠記載区分
 #        $16 HOSPNUM 
@@ -51,8 +52,23 @@ fi
         else
            LOG_FILE="/var/log/jma-receipt/${16}recept6b.log"
         fi
+
+        echo "arg1  = [" ${1}  "]"  >$LOG_FILE
+        echo "arg2  = [" ${2}  "]" >>$LOG_FILE
+        echo "arg3  = [" ${3}  "]" >>$LOG_FILE
+        echo "arg8  = [" ${8}  "]" >>$LOG_FILE
+        echo "arg9  = [" ${9}  "]" >>$LOG_FILE
+        echo "arg10 = [" ${10} "]" >>$LOG_FILE
+        echo "arg12 = [" ${12} "]" >>$LOG_FILE
+        echo "arg13 = [" ${13} "]" >>$LOG_FILE
+        echo "arg14 = [" ${14} "]" >>$LOG_FILE
+        echo "arg15 = [" ${15} "]" >>$LOG_FILE
+        echo "arg16 = [" ${16} "]" >>$LOG_FILE
+        echo "arg17 = [" ${17} "]" >>$LOG_FILE
+        echo "arg18 = [" ${18} "]" >>$LOG_FILE
+        echo "arg19 = [" ${19} "]" >>$LOG_FILE
         
-	$DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0400 -parameter $1$2$3$5$6,${17},${16},${4}    > $LOG_FILE 2>&1
+	$DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0400 -parameter $1$2$3$5$6,${17},${16},${4}    >> $LOG_FILE 2>&1
 
         if  [ -e $4 ]; then
             exit  
@@ -185,6 +201,31 @@ fi
             exit 
         else 
            $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0483 -parameter $9${10}$1$2$3$8$5$6,${18},${16},${4}    >> $LOG_FILE 2>&1
+        fi
+##
+##      レセ電作成        
+        if  [ -e $4 ]; then
+            exit 
+        else
+            if  [ ${12} -eq '1' ] || [ ${12} -eq '3' ] ; then
+                if  [ ${13} -eq '0' ]; then
+                    echo "no receden " ${13}  >> $LOG_FILE 2>&1
+                else
+                    $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0550 -parameter $1,$5,$6,${16},${4} >> $LOG_FILE 2>&1
+                    if  [ -e $4 ]; then
+                        exit 
+                    fi
+                    $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0551 -parameter $1$3$5$6,${17},${16},${4}  >> $LOG_FILE 2>&1
+                    if  [ -e $4 ]; then
+                        exit 
+                    fi
+                    $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0552 -parameter $1,$5,$6,${16},${4} >> $LOG_FILE 2>&1
+                    if  [ -e $4 ]; then
+                        exit 
+                    fi
+                    $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0555 -parameter $1,$5,$6,${16},${9},${10},${4} >> $LOG_FILE 2>&1
+                fi
+            fi
         fi
 
         if  [ -e $4 ]; then
