--- a/scripts/monthly/recept4_kobetu.sh.in
+++ b/scripts/monthly/recept4_kobetu.sh.in
@@ -107,7 +107,7 @@ fi
 	ERRLOG="${TMPFILEBASE}${SHNAME%%.sh}.log"
 	INFILE="/tmp/${23}${RECEFILE2}01.txt"
 	EUCFILE="${TMPFILEBASE}$(basename ${INFILE}).euc"
-	PRM="${23},${EUCFILE},${ERRFILE},${ERRLOG},${24}}"
+	PRM="${23},${EUCFILE},${ERRFILE},${ERRLOG},${24}"
 
 	export  RUBYLIB=$SITESCRIPTSDIR:$PATCHSCRIPTSDIR:$SCRIPTSDIR:$RUBYLIB
 	export  APS_EXEC_PATH=$(dirname $0)
