--- a/scripts/monthly/recept11.sh.in
+++ b/scripts/monthly/recept11.sh.in
@@ -26,6 +26,7 @@ fi
 #        $15 枠記載区分
 #        $16 HOSPNUM 
 #        $17 様式区分
+#            0:旧様式、1:平成１９年４月改正様式、2:ＯＣＲ様式
 #        $18 レセプト作成区分
 #            1:提出用レセ、2:点検用レセ
 #        $19 請求データ削除区分
@@ -50,8 +51,20 @@ fi
            LOG_FILE="/var/log/jma-receipt/${16}recept11b.log"
         fi
         
+    echo "arg1 =  [" ${1} "]" >$LOG_FILE
+    echo "arg2 =  [" ${2} "]" >>$LOG_FILE
+    echo "arg5 =  [" ${5} "]" >>$LOG_FILE
+    echo "arg6 =  [" ${6} "]" >>$LOG_FILE
+    echo "arg8 =  [" ${8} "]" >>$LOG_FILE
+    echo "arg9 =  [" ${9} "]" >>$LOG_FILE
+    echo "arg10 = [" ${10} "]" >>$LOG_FILE
+    echo "arg15 = [" ${15} "]" >>$LOG_FILE
+    echo "arg16 = [" ${16} "]" >>$LOG_FILE
+    echo "arg17 = [" ${17} "]" >>$LOG_FILE
+    echo "arg18 = [" ${18} "]" >>$LOG_FILE
+    echo "arg19 = [" ${19} "]" >>$LOG_FILE
 
-    	$DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0800 -parameter $1$2$3$5$6,${17},${16},${4}    > $LOG_FILE 2>&1
+    	$DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0800 -parameter $1$2$3$5$6,${17},${18},${16},${4}    >> $LOG_FILE 2>&1
 	
         if  [ -e $4 ]; then
             exit  
@@ -122,6 +135,14 @@ fi
 
         fi
 
+        if  [ ${17} -eq '2' ]; then
+            if  [ -e $4 ]; then
+                exit 
+            else 
+                $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0911 -parameter $1$3$5$6,${17},${18},${16},${4}  >> $LOG_FILE 2>&1
+            fi
+        fi
+
         if  [ -e $4 ]; then
             exit 
         else 
@@ -150,6 +171,14 @@ fi
 
         fi
 
+        if  [ ${17} -eq '2' ]; then
+            if  [ -e $4 ]; then
+                exit 
+            else 
+                $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0937 -parameter $1$3$5$6,${17},${16},${4}      >> $LOG_FILE 2>&1
+            fi
+        fi
+
         if  [ -e $4 ]; then
             exit 
         else 
@@ -160,7 +189,11 @@ fi
                    $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0957 -parameter $9${10}$1$2$3$8$5$6,${18},${19},${16},${4}   >> $LOG_FILE 2>&1
                fi
            else
-               $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0965 -parameter $9${10}$1$2$3$8$5$6,${15},${18},${19},${16},${4}  >> $LOG_FILE 2>&1
+               if  [ ${17} -eq '1' ]; then
+                   $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0965 -parameter $9${10}$1$2$3$8$5$6,${15},${18},${19},${16},${4}  >> $LOG_FILE 2>&1
+               else
+                   $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0967 -parameter $9${10}$1$2$3$8$5$6,${15},${18},${19},${16},${4}  >> $LOG_FILE 2>&1
+               fi
            fi
         fi
 
