--- a/scripts/monthly/recept15.sh.in
+++ b/scripts/monthly/recept15.sh.in
@@ -41,7 +41,7 @@ fi
            LOG_FILE="/var/log/jma-receipt/${16}recept15b.log"
         fi
 
-	$DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0600 -parameter $1$2$3$5$6,${16},${4} > $LOG_FILE 2>&1
+	$DBSTUB -dir $LDDIRECTORY -bd orcabt ORCR0600 -parameter $1$2$3$5$6,${18},${16},${4} > $LOG_FILE 2>&1
         
         if  [ -e $4 ]; then
             exit 
