--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2001,6 +2001,7 @@ COPYS = \
  	CPTEKIOU-MEDICINE.INC \
  	CPTEKIOU-DISEASE.INC \
 	CPORCSS013.INC \
+	CPR02SPASCR.INC \
 
 MCPAREA = \
 	MCPAREA 
