--- a/bin/orcvt_euc_kananame.rb.in
+++ b/bin/orcvt_euc_kananame.rb.in
@@ -1,6 +1,7 @@
 #!%RUBY%
 # coding : euc-jp
-require "jcode"
+Encoding.default_external = "euc-jp"
+#require "jcode"
 
 # 半角英数字記号 -> 全角変換(EUC) script for ORCA
 # 
@@ -12,7 +13,7 @@ require "jcode"
 #     対象項目番号 2 [ $tgt_csv_no ] ( カナ氏名 )
 # 02/01/03 by 伊藤
 
-$KCODE = "euc"
+#$KCODE = "euc"
 
 $file_path_name = ARGV[0]
 $tgt_csv_no = [2]
