--- a/scripts/monthly/receden_error.rb.in
+++ b/scripts/monthly/receden_error.rb.in
@@ -468,6 +468,8 @@ class Receden_error < Receden_common
       err.msg="特記事項に「１９」（低所）が記録されていますが、標準負担額区分が記録されていません。"
     when "36390"
       err.msg="病床数の記録が必要です。"
+    when "42220"
+      err.msg="保険請求可能な傷病名が記録されていません。"
     when "43230"
       err.msg="単位コードの記録が必要な特定器材ですが、単位コードが記録されていません。"
     when "46120"
