労災診療費請求書及びアフターケア委託費請求書のＯＣＲ様式対応

--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2002,6 +2002,8 @@ COPYS = \
  	CPTEKIOU-DISEASE.INC \
 	CPORCSS013.INC \
 	CPR02SPASCR.INC \
+	HCM79.INC \
+	HCM81.INC \
 
 MCPAREA = \
 	MCPAREA 
