--- a/cobol/orcabt/Makefile
+++ b/cobol/orcabt/Makefile
@@ -389,6 +389,8 @@ SRCS = ORCBD001.CBL \
        ORCBDASCONF.CBL \
        ORCBG023.CBL \
        ORCMUP0281.CBL \
+       ORCBM043.CBL \
+
 
 top_builddir = ../..
 include $(top_builddir)/cobol/Makefile.global
