--- a/form/Makefile.in
+++ b/form/Makefile.in
@@ -563,6 +563,10 @@ FORM_files = \
 	      HCM78.red \
           HCM401V05.red \
           HCM402V03.red \
+          HCM79.red \
+          HCM80.red \
+          HCM81.red \
+          HCM82.red \
 
 all:   
 
