労災診療費請求書及びアフターケア委託費請求書のＯＣＲ様式対応

--- a/cobol/orcabt/Makefile
+++ b/cobol/orcabt/Makefile
@@ -386,6 +386,7 @@ SRCS = ORCBD001.CBL \
        ORCBG022.CBL \
        ORCBG023.CBL \
        ORCMUP0281.CBL \
+       ORCBM043.CBL \
 
 top_builddir = ../..
 include $(top_builddir)/cobol/Makefile.global
