ユーザ管理API追加

--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2004,6 +2004,8 @@ COPYS = \
 	CPR02SPASCR.INC \
 	HCM79.INC \
 	HCM81.INC \
+	CPMANAGEUSERSV2REQ.INC \
+	CPMANAGEUSERSV2RES.INC \
 
 MCPAREA = \
 	MCPAREA 
