--- a/cobol/orca101/Makefile
+++ b/cobol/orca101/Makefile
@@ -58,6 +58,7 @@ SRCS = ORCGW01.CBL \
        ORCGW37.CBL \
        ORCGW91.CBL \
        ORCGW92.CBL \
+       ORCGWAPI01.CBL \
         
 
 top_builddir = ../..
