--- a/record/Makefile.in
+++ b/record/Makefile.in
@@ -490,6 +490,7 @@ RECORD_files = \
 	MMERR.rec \
 	MMID1.rec \
 	systeminfv2.rec \
+	manageusersv2.rec \
 
 DEF_files = \
 
@@ -792,6 +793,8 @@ DB_files = \
 	xml_systeminfv2req.db \
 	tbl_das_conf.db \
 	monbatch_log.db \
+	xml_manageusersv2req.db \
+	xml_manageusersv2res.db \
 
 shell.db: shell.db.in
 	sed -e 's,\@scriptsdir\@,$(scriptsdir),g' $< >$@
