短期滞在３の包括判定サブ

--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2006,6 +2006,7 @@ COPYS = \
 	HCM81.INC \
 	CPMANAGEUSERSV2REQ.INC \
 	CPMANAGEUSERSV2RES.INC \
+	CPORCSTANKI3HKT.INC \
 
 MCPAREA = \
 	MCPAREA 
