中途終了データ一括削除対応

--- a/cobol/orcabt/Makefile
+++ b/cobol/orcabt/Makefile
@@ -390,6 +390,7 @@ SRCS = ORCBD001.CBL \
        ORCBG023.CBL \
        ORCMUP0281.CBL \
        ORCBM043.CBL \
+       ORCBGD01.CBL \
 
 
 top_builddir = ../..
