印刷ジョブ削除スクリプト修正

--- a/scripts/allways/orc_cups_del.sh.in
+++ b/scripts/allways/orc_cups_del.sh.in
@@ -12,5 +12,6 @@ fi
 #       CUPS スプール削除
 #-------------------------------------------#
 #
-	cancel -a -u orca
+	cancel -u orca -a
+	cancel -u orca -a -x
 	exit 
