--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2007,6 +2007,9 @@ COPYS = \
 	CPMANAGEUSERSV2REQ.INC \
 	CPMANAGEUSERSV2RES.INC \
 	CPORCSTANKI3HKT.INC \
+	CPORCSRIHASTDAY.INC \
+	CPORCSTEMPTBL.INC \
+	CPORCSTENTEK3.INC \
 
 MCPAREA = \
 	MCPAREA 
