医療区分・ＡＤＬ区分に係わる評価票一括発行対応

--- a/cobol/orcabt/Makefile
+++ b/cobol/orcabt/Makefile
@@ -392,6 +392,7 @@ SRCS = ORCBD001.CBL \
        ORCBM043.CBL \
        ORCBGD01.CBL \
        ORCMUP0152.CBL \
+       ORCBG024.CBL \
 
 
 top_builddir = ../..
