--- a/scripts/tools/run_renkei_data_2.sh.in
+++ b/scripts/tools/run_renkei_data_2.sh.in
@@ -23,6 +23,21 @@ if ! [ -d $2 ]; then
   exit 1
 fi
 
+FLG_TEMPDIR_GEN=0
+if [ -z "${MCP_TEMPDIR}" ]; then
+  export MCP_TEMPDIR=/tmp/orca_root/$(uuidgen)
+  mkdir -p ${MCP_TEMPDIR}
+  FLG_TEMPDIR_GEN=1
+fi
+
+delete_tempdir(){
+  if [ ${FLG_TEMPDIR_GEN} -eq 1 ] ; then
+     rm -R ${MCP_TEMPDIR}
+  fi
+}
+
+create_pgpass
+
 #-------------------------------------------#
 # 連携基盤用レセプト一括処理（外来）
 #    $1  SRYYM TERID SYSYMD
@@ -60,12 +75,22 @@ ARG04="/tmp/${ARG16}00OR042ERRAAAABBBBCCCCDDDD.dat"
 
 $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCBJOB -parameter "JBS0000001RECEPT1,${ARG16}"
 
-recept1.sh "${ARG01}" "1" "0" "${ARG04}" "0000001" "RECEPT1" \
-           "NOPG" "${ARG08}" "${ARG09}" "${ARG10}" "" "3" "3" \
-           "" "" "${ARG16}" "" "9" "0" "0"
+export MON_BATCH_ID=$(uuidgen)
+export MON_BATCH_NAME="recept1.sh"
+export MON_BATCH_GROUPNAME="${ARG16}"
+export MON_BATCH_EXTRA="0000001RECEPT1"
+export MON_DIRECTORY_PATH="${LDDIRECTORY}"
+export MCP_TENANT=1
+
+PARAM="\"${ARG01}\" 1 0 \"${ARG04}\" 0000001 RECEPT1 \
+       NOPG \"${ARG08}\" \"${ARG09}\" \"${ARG10}\" \"\" 3 3 \
+       \"\" \"\" \"${ARG16}\" \"\" 9 0 0"
+
+/usr/lib/panda/bin/monbatch "recept1.sh ${PARAM}"
 R1RC=$?
 
 if [ ${R1RC} -ne 0 ] ; then
+  delete_tempdir 
   exit ${R1RC}
 fi
 
@@ -103,30 +128,53 @@ ARG18="127.0.0.1"
 ARG20=`printf "%02d" $1`
 ARG16="/tmp/${ARG20}00OR044ERRAAAABBBBCCCCDDDD.dat"
 
+export MON_BATCH_ID=$(uuidgen)
+export MON_BATCH_NAME="recept4.sh"
+export MON_BATCH_GROUPNAME="${ARG20}"
+export MON_BATCH_EXTRA="0000001SOKATU"
+export MON_DIRECTORY_PATH="${LDDIRECTORY}"
+export MCP_TENANT=1
+
 # 社保
 $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCBJOB -parameter "JBS0000001SOKATU,${ARG20}"
 
-recept4.sh "0001" "SOKATU" "${ARG05}${ARG06}" "0000" "${ARG05}" "${ARG06}" \
-           "recept4.sh" "0000" "AAAABBBBCCCCDDDD" "orcacron" "prt" "1" \
-           "${ARG13}" "0000001" "SOKATU" "${ARG16}" "4" "${ARG18}" \
-           "2" "${ARG20}" "6" "0" "0" "0" "99999999" "0"
+PARAM="0001 SOKATU \"${ARG05}${ARG06}\" 0000 \"${ARG05}\" \"${ARG06}\" \
+       recept4.sh 0000 AAAABBBBCCCCDDDD orcacron prt 1 \
+       \"${ARG13}\" 0000001 SOKATU \"${ARG16}\" 4 \"${ARG18}\" \
+       2 \"${ARG20}\" 6 0 0 0 99999999 0"
+
+/usr/lib/panda/bin/monbatch "recept4.sh ${PARAM}"
 R4RC=$?
 
 if [ ${R4RC} -ne 0 ] ; then
+  delete_tempdir 
   exit ${R4RC}
 fi
+
+export MON_BATCH_ID=$(uuidgen)
+export MON_BATCH_NAME="recept4.sh"
+export MON_BATCH_GROUPNAME="${ARG20}"
+export MON_BATCH_EXTRA="0000001SOKATU"
+export MON_DIRECTORY_PATH="${LDDIRECTORY}"
+export MCP_TENANT=1
 
 # 国保
 $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCBJOB -parameter "JBS0000001SOKATU,${ARG20}"
 
-recept4.sh "0001" "SOKATU" "${ARG05}${ARG06}" "0000" "${ARG05}" "${ARG06}" \
-           "recept4.sh" "0000" "AAAABBBBCCCCDDDD" "orcacron" "prt" "2" \
-           "${ARG13}" "0000001" "SOKATU" "${ARG16}" "4" "${ARG18}" \
-           "2" "${ARG20}" "6" "0" "0" "0" "99999999" "0"
+PARAM="0001 SOKATU \"${ARG05}${ARG06}\" 0000 \"${ARG05}\" \"${ARG06}\" \
+       recept4.sh 0000 AAAABBBBCCCCDDDD orcacron prt 2 \
+       \"${ARG13}\" 0000001 SOKATU \"${ARG16}\" 4 \"${ARG18}\" \
+       2 \"${ARG20}\" 6 0 0 0 99999999 0"
+
+/usr/lib/panda/bin/monbatch "recept4.sh ${PARAM}"
 R4RC=$?
 
 if [ ${R4RC} -ne 0 ] ; then
+  delete_tempdir 
   exit ${R4RC}
 fi
+
+delete_tempdir
+delete_pgpass
 
 exit ${R4RC}
