返戻取り込み済みデータ一覧対応

--- a/screen/Makefile.in
+++ b/screen/Makefile.in
@@ -440,6 +440,7 @@ SCREEN_screen = \
 	M03.glade \
 	MMERR.glade \
 	MMID1.glade \
+	H03.glade \
 
 SCREEN_objs = $(SCREEN_sources:.glade.in=.glade)
 
