傷病名マスタ一覧

--- a/cobol/orcabt/Makefile
+++ b/cobol/orcabt/Makefile
@@ -393,6 +393,7 @@ SRCS = ORCBD001.CBL \
        ORCBGD01.CBL \
        ORCMUP0152.CBL \
        ORCBG024.CBL \
+       ORCBG025.CBL \
 
 
 top_builddir = ../..
