HAORI対応（診療行為）、負担金計算サブ対応

--- a/cobol/common/Makefile
+++ b/cobol/common/Makefile
@@ -386,6 +386,8 @@ SRCS = ORCHC01.CBL \
        ORCSRIHASTDAY.CBL \
        ORCSTEMPTBL.CBL \
        ORCSTENTEK3.CBL \
+       ORCSCSYUNOUG.CBL \
+       ORCDBAPIV3.CBL \
 
 top_builddir = ../..
 include $(top_builddir)/cobol/Makefile.global
