--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2012,6 +2012,19 @@ COPYS = \
 	CPORCSTENTEK3.INC \
 	CPSK1903.INC \
 	H03.INC \
+        API21V3SCRAREA.INC \
+	CPAPIPARA.INC \
+	CPMDCXMLV3REQ1.INC \
+	CPMDCXMLV3REQ2.INC \
+	CPMDCXMLV3REQ3.INC \
+	CPMDCXMLV3RES1.INC \
+	CPMDCXMLV3RES2.INC \
+	CPMDCXMLV3RES3.INC \
+	CPORAPI021SUB1V3.INC \
+	CPORAPI021SUB2V3.INC \
+	CPORAPIV3SUB01.INC \
+	CPORCSCSYUNOUG.INC \
+	MCPDATA3.INC \
 
 MCPAREA = \
 	MCPAREA 
