--- a/cobol/api21/Makefile
+++ b/cobol/api21/Makefile
@@ -1,5 +1,11 @@
 SRCS = ORAPI021S1.CBL \
        ORAPI021S1V2.CBL \
+       ORAPI021S1V3.CBL \
+       ORAPI021S2V3.CBL \
+       ORAPI021SUB2V3.CBL \
+       ORAPI021SUB1V3.CBL \
+       ORAPI021S3V3.CBL \
+       ORAPIV3SUB01.CBL \
 
 top_builddir = ../..
 include $(top_builddir)/cobol/Makefile.global
