患者登録HAORI対応、レセプト分割公費単独対応他

--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2025,6 +2025,14 @@ COPYS = \
 	CPORAPIV3SUB01.INC \
 	CPORCSCSYUNOUG.INC \
 	MCPDATA3.INC \
+	CPORAPI012SUB1.INC \
+	CPORAPI012SUB2V3.INC \
+	CPPATIENTMODV3REQ1.INC \
+	CPPATIENTMODV3REQ2.INC \
+	CPPATIENTMODV3REQ3.INC \
+	CPPATIENTMODV3RES1.INC \
+	CPPATIENTMODV3RES2.INC \
+	CPPATIENTMODV3RES3.INC \
 
 MCPAREA = \
 	MCPAREA 
