--- a/cobol/orca12/Makefile
+++ b/cobol/orca12/Makefile
@@ -44,6 +44,11 @@ SRCS = \
         ORCGP02T.CBL \
 	ORAPI012S1V2.CBL \
         ORCGP028.CBL \
+	ORAPI012S1V3.CBL \
+	ORAPI012SUB1.CBL \
+	ORAPI012S2V3.CBL \
+	ORAPI012SUB2V3.CBL \
+	ORAPI012S3V3.CBL \
 
 
 top_builddir = ../..
