APIセット登録対応

--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2033,6 +2033,8 @@ COPYS = \
 	CPPATIENTMODV3RES1.INC \
 	CPPATIENTMODV3RES2.INC \
 	CPPATIENTMODV3RES3.INC \
+	CPMDCSETV2REQ.INC \
+	CPMDCSETV2RES.INC \
 
 MCPAREA = \
 	MCPAREA 
