--- a/cobol/orca21/Makefile
+++ b/cobol/orca21/Makefile
@@ -37,6 +37,7 @@ SRCS = ORCGK01.CBL \
        ORCSC10S201204.CBL \
        ORCSC10S201307.CBL \
        ORCSC10S201404.CBL \
+       ORAPI021SETV2.CBL \
 
 top_builddir = ../..
 include $(top_builddir)/cobol/Makefile.global
