--- a/record/Makefile.in
+++ b/record/Makefile.in
@@ -498,6 +498,7 @@ RECORD_files = \
 	patientmodv31.rec \
 	patientmodv32.rec \
 	patientmodv33.rec \
+	medicalsetv2.rec \
 
 DEF_files = \
 
@@ -815,6 +816,8 @@ DB_files = \
 	xml_patientmodv3res1.db \
 	xml_patientmodv3res2.db \
 	xml_patientmodv3res3.db \
+	xml_medicalsetv2req.db \
+	xml_medicalsetv2res.db \
 
 shell.db: shell.db.in
 	sed -e 's,\@scriptsdir\@,$(scriptsdir),g' $< >$@
