--- a/scripts/monthly/recept41.sh.in
+++ b/scripts/monthly/recept41.sh.in
@@ -234,13 +234,14 @@ fi
 	    [ -e ${INFILE}  ] &&  nkf --ic=CP932 --oc=UTF-8 ${INFILE} > ${UTF8FILE}
 
 
-	    rosai_receden_check.rb "$PRM" 2>  ${ERRLOG}
-	    if [ -s ${ERRLOG} ]; then
-	        cat ${ERRLOG} >> $LOG_FILE
+	    echo "--- receden check start $(LANG=C date) ---" >>$LOG_FILE
+	    rosai_receden_check.rb "$PRM" >> $LOG_FILE 2>&1
+		if [ $? -ne 0 ]; then
 	        ERRCD='0099'
 	        $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCBJOB -parameter JBE${14}${15}'  '${ERRCD:${#ERRCD}-4:4},${20} >> $LOG_FILE
 	        exit
 	    fi
+	    echo "--- receden check end   $(LANG=C date) ---" >>$LOG_FILE
         done
 
         rennum=1
