API保険公費種類取得追加

--- a/cobol/api01rv2/Makefile
+++ b/cobol/api01rv2/Makefile
@@ -4,6 +4,7 @@ SRCS = ORAPI012R1V2.CBL \
        ORAPI012R2V2.CBL  \
        ORAPI012R3V2.CBL \
        ORAPI012R4V2.CBL \
+       ORAPI012R5V2.CBL \
        ORAPI101R1V2.CBL \
        ORAPI021R1V2.CBL \
        ORAPI022R1V2.CBL \
