--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2035,6 +2035,8 @@ COPYS = \
 	CPPATIENTMODV3RES3.INC \
 	CPMDCSETV2REQ.INC \
 	CPMDCSETV2RES.INC \
+	CPINSURANCEINF1V2REQ.INC \
+	CPINSURANCEINF1V2RES.INC \
 
 MCPAREA = \
 	MCPAREA 
