--- a/record/Makefile.in
+++ b/record/Makefile.in
@@ -499,6 +499,7 @@ RECORD_files = \
 	patientmodv32.rec \
 	patientmodv33.rec \
 	medicalsetv2.rec \
+	insuranceinf1v2.rec \
 
 DEF_files = \
 
@@ -818,6 +819,8 @@ DB_files = \
 	xml_patientmodv3res3.db \
 	xml_medicalsetv2req.db \
 	xml_medicalsetv2res.db \
+	xml_insuranceinf1v2req.db \
+	xml_insuranceinf1v2res.db \
 
 shell.db: shell.db.in
 	sed -e 's,\@scriptsdir\@,$(scriptsdir),g' $< >$@
