--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2037,6 +2037,11 @@ COPYS = \
 	CPMDCSETV2RES.INC \
 	CPINSURANCEINF1V2REQ.INC \
 	CPINSURANCEINF1V2RES.INC \
+	CPBDV2REQ.INC \
+	CPBDV2RES.INC \
+	CPORCSI02.INC \
+	CPORCSODR11S02.INC \
+	CPORCSODRS04.INC \
 
 MCPAREA = \
 	MCPAREA 
