印刷スクリプト改修(分割monupload等)

--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -120,6 +120,7 @@ shell_sources = \
 ruby_sources = \
 	daily/print_parent2.rb.in \
 	daily/print_parent_prv.rb.in \
+	daily/print_parent_common.rb.in \
 	daily/apslib.rb.in \
 	daily/monlib.rb.in \
 	allways/cachedl.rb.in \
