--- a/scripts/allways/print_stop.sh.in
+++ b/scripts/allways/print_stop.sh.in
@@ -15,6 +15,6 @@ fi
 #        $2
 #-------------------------------------------#
 #
-        touch /tmp/$1$2.tmp
+        touch ${MCP_TEMPDIR}/$1$2.tmp
 
         exit 
