--- a/scripts/daily/HCALL_prv.sh.in
+++ b/scripts/daily/HCALL_prv.sh.in
@@ -18,7 +18,7 @@ export PATH=$SITESCRIPTSDIR/daily:$PATCHSCRIPTSDIR/daily:$SCRIPTSDIR/daily:$(dir
 #       1:DATAファイル名称
 #       2:HOSPNUM
 #       3:エンコーディング(1:EUC-JP/2:UTF8/3:OTHER)
-#       4:none
+#       4:プレビュー管理編集フラグ（1:編集する/1以外:編集しない）
 #       5:帳票表題（クライアント印刷用）
 #       6:ダイアログ表示区分（1:ダイアログ表示　クライアント印刷用）
 #----------------------------------------------------------------------#
@@ -53,7 +53,12 @@ echo "yaml"  >> ${LOG}
 cat ${YAML_FILE} >> ${LOG}
 echo "--" >> ${LOG}
 
-$DBSTUB -dir $LDDIRECTORY -bd orcabt ORCBPREV -parameter ${PRT_FILE_BASE},$2  >> ${LOG} 2>&1
+if [ "$4"  == "1" ]; then
+  $DBSTUB -dir $LDDIRECTORY -bd orcabt ORCBPREV -parameter ${PRT_FILE_BASE},$2  >> ${LOG} 2>&1
+else
+  echo "ORCBPREV skipped" >> ${LOG} 2>&1
+fi
+
 print_parent_prv.rb ${YAML_FILE} >> ${LOG} 2>&1
 [ -e ${YAML_FILE} ] && rm ${YAML_FILE}
 
