HAORI診療行為削除訂正対応

--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2042,6 +2042,8 @@ COPYS = \
 	CPORCSI02.INC \
 	CPORCSODR11S02.INC \
 	CPORCSODRS04.INC \
+	CPMDCXMLV3REQ4.INC \
+	CPMDCXMLV3RES4.INC \
 
 MCPAREA = \
 	MCPAREA 
