--- a/cobol/api21/Makefile
+++ b/cobol/api21/Makefile
@@ -6,6 +6,7 @@ SRCS = ORAPI021S1.CBL \
        ORAPI021SUB1V3.CBL \
        ORAPI021S3V3.CBL \
        ORAPIV3SUB01.CBL \
+       ORAPI021S4V3.CBL \
 
 top_builddir = ../..
 include $(top_builddir)/cobol/Makefile.global
