--- a/record/Makefile.in
+++ b/record/Makefile.in
@@ -501,6 +501,7 @@ RECORD_files = \
 	medicalsetv2.rec \
 	insuranceinf1v2.rec \
 	birthdeliveryv2.rec \
+	medicalmodv34.rec \
 
 DEF_files = \
 
@@ -824,6 +825,8 @@ DB_files = \
 	xml_insuranceinf1v2res.db \
 	xml_birthdeliveryv2req.db \
 	xml_birthdeliveryv2res.db \
+	xml_medicalv3req4.db \
+	xml_medicalv3res4.db \
 
 shell.db: shell.db.in
 	sed -e 's,\@scriptsdir\@,$(scriptsdir),g' $< >$@
