レセプト情報（レセプトの枚数、点数）取得

--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2044,6 +2044,8 @@ COPYS = \
 	CPORCSODRS04.INC \
 	CPMDCXMLV3REQ4.INC \
 	CPMDCXMLV3RES4.INC \
+	CPRECEIPT-INF1V2REQ.INC \
+	CPRECEIPT-INF1V2RES.INC \
 
 MCPAREA = \
 	MCPAREA 
