--- a/record/Makefile.in
+++ b/record/Makefile.in
@@ -502,6 +502,7 @@ RECORD_files = \
 	insuranceinf1v2.rec \
 	birthdeliveryv2.rec \
 	medicalmodv34.rec \
+	receiptinf1v2.rec \
 
 DEF_files = \
 
@@ -827,6 +828,8 @@ DB_files = \
 	xml_birthdeliveryv2res.db \
 	xml_medicalv3req4.db \
 	xml_medicalv3res4.db \
+	xml_receipt_inf1v2req.db \
+	xml_receipt_inf1v2res.db \
 
 shell.db: shell.db.in
 	sed -e 's,\@scriptsdir\@,$(scriptsdir),g' $< >$@
