--- a/cobol/api01rv2/Makefile
+++ b/cobol/api01rv2/Makefile
@@ -24,6 +24,7 @@ SRCS = ORAPI012R1V2.CBL \
        ORAPI034R1V2.CBL \
        ORAPI023R2V2.CBL \
        ORAPI000R1V2.CBL \
+       ORAPI042R1V2.CBL \
        
 top_builddir = ../..
 include $(top_builddir)/cobol/Makefile.global
