職員情報登録対応、当日ドクター表示対応

--- a/cobol/copy/Makefile.in
+++ b/cobol/copy/Makefile.in
@@ -2046,6 +2046,10 @@ COPYS = \
 	CPMDCXMLV3RES4.INC \
 	CPRECEIPT-INF1V2REQ.INC \
 	CPRECEIPT-INF1V2RES.INC \
+	UDR.INC \
+	CPLIST_DOCTOR.INC \
+	W061.INC \
+	W06SCR-SPA \
 
 MCPAREA = \
 	MCPAREA 
