--- a/record/Makefile.in
+++ b/record/Makefile.in
@@ -503,6 +503,8 @@ RECORD_files = \
 	birthdeliveryv2.rec \
 	medicalmodv34.rec \
 	receiptinf1v2.rec \
+	UDR.rec \
+	W061.rec \
 
 DEF_files = \
 
@@ -830,6 +832,7 @@ DB_files = \
 	xml_medicalv3res4.db \
 	xml_receipt_inf1v2req.db \
 	xml_receipt_inf1v2res.db \
+	tbl_list_doctor.db \
 
 shell.db: shell.db.in
 	sed -e 's,\@scriptsdir\@,$(scriptsdir),g' $< >$@
